test/fail/29-keyword_as_model.perk
// Test that using a reserved keyword as a model name fails
// Should produce: keyword 'if' cannot be used as model identifier

model if {
    let x : int = 0
}
